--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1,12 +1,9 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-
 // :root {
-//   --base-color: #{$base-color}; 
+//   --base-color: #{$base-color};
 // }
 
 body {
@@ -14,11 +11,11 @@ body {
 }
 
 .page {
-  @apply text-5xl font-bold underline
+  @apply text-5xl font-bold underline;
 }
 
 @layer base {
   :root {
-    --radius: 0.5rem; 
-  } 
+    --radius: 0.5rem;
+  }
 }
